--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ install:
     - python -c "$(curl -fsSL https://raw.githubusercontent.com/platformio/platformio/master/scripts/get-platformio.py)"
 
 script:
-    - platformio ci janitoo/ --board=mega
-    - platformio ci janitoo/ --board=uno --board=due --board=teensy31 --board=esp01
+    - platformio ci janitoo/ --board=megaatmega1280
+    - platformio ci janitoo/ --board=uno
+    - platformio ci janitoo/ --board=due
+    - platformio ci janitoo/ --board=teensy31
+    - platformio ci janitoo/ --board=esp01
+    - platformio ci janitoo/ --board=esp01
